# double-array-trie

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
common/: loader.h  metrics.h  profile.h  testcases.h
compact_dawg/: CMakeLists.txt  compact_dawg.h  compact_dawg_tests.cpp
comparison/: CMakeLists.txt  darts_tests.cpp  htrie_tests.cpp
concepts/: trie_concepts.h
data/: en_1k.txt
datrie/: CMakeLists.txt  compact_datrie.h  datrie.h  datrie_builder.h  datrie_builder_tests.cpp  datrie_tests.cpp  default_datrie.h  no_value_datrie.h
datrie/serializers/: compact_serializer.h  default_serializer.h  no_value_serializer.h
dawg/: CMakeLists.txt  dawg.h  dawg_tests.cpp
hashtrie/: CMakeLists.txt  hashtrie.h  hashtrie_tests.cpp
